add USE_FINGERPRINT again
and update sdk

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
@@ -11,11 +12,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:preserveLegacyExternalStorage="true"
         android:name=".XmrWalletApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:preserveLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true">
@@ -34,7 +35,7 @@
             android:configChanges="orientation|keyboardHidden|uiMode"
             android:label="@string/wallet_activity_name"
             android:launchMode="singleTask"
-            android:screenOrientation="behind"/>
+            android:screenOrientation="behind" />
         <activity
             android:name=".LoginActivity"
             android:configChanges="orientation|keyboardHidden|uiMode"
