--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,27 @@
+version: 2
 jobs:
   build:
+    working_directory: ~/code
     docker:
-      - image: cimg/android:2022.3.1-ndk
+      - image: cimg/android:2022.03-ndk
+    environment:
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
