--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
+org.gradle.configuration-cache=true
