--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,8 +108,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     namespace 'com.m2049r.xmrwallet'
     buildFeatures {
@@ -136,42 +136,42 @@ static def getId(name) {
 }
 
 dependencies {
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
+    implementation(platform('org.jetbrains.kotlin:kotlin-bom:2.1.21'))
 
-    implementation 'androidx.core:core:1.15.0'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.core:core:1.16.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.preference:preference:1.2.1'
 
     implementation 'com.google.android.material:material:1.12.0'
 
-    implementation "com.google.guava:guava:33.1.0-android"
+    implementation 'com.google.guava:guava:33.4.8-android'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
-    implementation "io.github.rburgst:okhttp-digest:3.1.0"
+    implementation 'io.github.rburgst:okhttp-digest:3.1.1'
     implementation "com.jakewharton.timber:timber:5.0.1"
 
     implementation 'info.guardianproject.netcipher:netcipher:2.1.0'
     //implementation 'info.guardianproject.netcipher:netcipher-okhttp3:2.1.0'
     implementation fileTree(dir: 'libs/classes', include: ['*.jar'])
-    implementation 'com.nulab-inc:zxcvbn:1.8.2'
+    implementation 'com.nulab-inc:zxcvbn:1.9.0'
 
-    implementation 'dnsjava:dnsjava:3.5.3'
-    implementation 'org.slf4j:slf4j-nop:2.0.11'
+    implementation 'dnsjava:dnsjava:3.6.3'
+    implementation 'org.slf4j:slf4j-nop:2.0.17'
     implementation 'com.github.brnunes:swipeablerecyclerview:1.0.2'
 
     //noinspection GradleDependency
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.mockito:mockito-all:1.10.19"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.12.0"
-    testImplementation 'org.json:json:20231013'
+    testImplementation 'org.json:json:20250517'
     testImplementation 'net.jodah:concurrentunit:0.4.6'
 
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.projectlombok:lombok:1.18.38'
+    annotationProcessor 'org.projectlombok:lombok:1.18.38'
 }
